--- a/index.html
+++ b/index.html
@@ -138,25 +138,6 @@
 
   <!-- Meta Pixel Code -->
   <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '699537746300958');
-    fbq('track', 'PageView');
-  </script>
-  <noscript>
-    <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=699537746300958&ev=PageView&noscript=1"/>
-  </noscript>
-  <!-- End Meta Pixel Code -->
-
-  <!-- Meta Pixel Code (Novo) -->
-  <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
   n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -165,17 +146,18 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '987985760073825');
+  fbq('init', '3927212020922871');
   fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=987985760073825&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id=3927212020922871&ev=PageView&noscript=1"
   /></noscript>
-  <!-- End Meta Pixel Code (Novo) -->
+  <!-- End Meta Pixel Code -->
 
 </head>
 <body>
   <button id="lang-toggle" style="position:fixed;top:18px;right:18px;z-index:10;padding:8px 18px;border-radius:20px;border:none;background:#fff;color:#b30000;font-weight:bold;cursor:pointer;box-shadow:0 2px 8px #0002;transition:background 0.2s;">English</button>
+
   <img src="Barbie Tatuada  (4).jpg" class="bg-img img1" alt="Barbie Tatuada 4" />
   <img src="Barbie Tatuada  (16).jpg" class="bg-img img2" alt="Barbie Tatuada 16"/>
   <img src="Barbie Tatuada  (20).jpg" class="bg-img img3" alt="Barbie Tatuada 20"/>
@@ -186,7 +168,9 @@
     <p id="no-censorship" style="color: #ff0033; font-weight: bold; margin-bottom: 0;">sem censura</p>
     <p id="teaser">👅 Quer ver tudo o que tá por trás dessas fotos?<br>A gente sabe que você já ficou imaginando... então para de só olhar e vem sentir de verdade.</p>
     <p id="cta-text" style="font-size: 1.2em; margin: 18px 0 10px 0; font-weight: bold; color: #ff0033;">CLIQUE AQUI E DESBLOQUEIE AGORA<br><span id="cta-sub" style="font-size: 0.95em; font-weight: normal; color: #fff;">Apenas para os corajosos. Não diga que eu não avisei 😏</span></p>
-    <a class="cta" id="cta-btn" href="https://privacy.com.br/checkout/novinhoooos" target="_blank">🔓 Por apenas R$19,90</a>
+    <a class="cta" id="cta-btn-privacy" href="https://privacy.com.br/profile/Barbietatuadaoficial" target="_blank">🔓 Privacy Por apenas R$39,90</a>
+    <a class="cta" id="cta-btn-onlyfans" href="https://onlyfans.com/barbietatuada" target="_blank">🔓 Onlyfans Por apenas $ 7.00</a>
+
   </div>
   <script>
     const translations = {
@@ -195,7 +179,8 @@
         'no-censorship': 'sem censura',
         'teaser': '👅 Quer ver tudo o que tá por trás dessas fotos?<br>A gente sabe que você já ficou imaginando... então para de só olhar e vem sentir de verdade.',
         'cta-text': 'CLIQUE AQUI E DESBLOQUEIE AGORA<br><span id="cta-sub" style="font-size: 0.95em; font-weight: normal; color: #fff;">Apenas para os corajosos. Não diga que eu não avisei 😏</span>',
-        'cta-btn': '🔓 Por apenas R$19,90',
+        'cta-btn-privacy': '🔓 Privacy Por apenas R$39,90',
+        'cta-btn-onlyfans': '🔓 Onlyfans Por apenas $ 7.00',
         'lang-toggle': 'English',
       },
       en: {
@@ -203,22 +188,18 @@
         'no-censorship': 'uncensored',
         'teaser': "👅 Want to see everything behind these photos?<br>We know you've been imagining... so stop just looking and come really feel it.",
         'cta-text': 'CLICK HERE AND UNLOCK NOW<br><span id=\"cta-sub\" style=\"font-size: 0.95em; font-weight: normal; color: #fff;\">For the brave only. Don\'t say I didn\'t warn you 😏</span>',
-        'cta-btn': '🔓 Only R$19.90',
+        'cta-btn-privacy': '🔓 Privacy For just R$39,90',
+        'cta-btn-onlyfans': '🔓 Onlyfans For only $ 7.00',
         'lang-toggle': 'Português',
       }
     };
     let currentLang = 'pt';
     document.getElementById('lang-toggle').onclick = function() {
       currentLang = currentLang === 'pt' ? 'en' : 'pt';
-      for (const id of ['main-title','no-censorship','teaser','cta-text','cta-btn','lang-toggle']) {
+      for (const id of ['main-title','no-censorship','teaser','cta-text','cta-btn-privacy','cta-btn-onlyfans','lang-toggle']) {
         const el = document.getElementById(id);
-        if (el) {
-          // Use innerHTML para elementos que podem conter HTML
-          if (id === 'teaser' || id === 'cta-text') {
-            el.innerHTML = translations[currentLang][id];
-          } else {
-            el.textContent = translations[currentLang][id];
-          }
+        if (el && translations[currentLang][id]) {
+          el.innerHTML = translations[currentLang][id];
         }
       }
     };
