--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
     <p id="no-censorship" style="color: #ff0033; font-weight: bold; margin-bottom: 0;">sem censura</p>
     <p id="teaser">👅 Quer ver tudo o que tá por trás dessas fotos?<br>A gente sabe que você já ficou imaginando... então para de só olhar e vem sentir de verdade.</p>
     <p id="cta-text" style="font-size: 1.2em; margin: 18px 0 10px 0; font-weight: bold; color: #ff0033;">CLIQUE AQUI E DESBLOQUEIE AGORA<br><span id="cta-sub" style="font-size: 0.95em; font-weight: normal; color: #fff;">Apenas para os corajosos. Não diga que eu não avisei 😏</span></p>
-    <a class="cta" id="cta-btn-privacy" href="https://privacy.com.br/profile/Barbietatuadaoficial" target="_blank">🔓 Privacy Por apenas R$39,90</a>
+    <a class="cta" id="cta-btn-privacy" href="https://privacy.com.br/profile/Barbietatuadaoficial" target="_blank">🔓 Privacy Por apenas R$29,90</a>
     <a class="cta" id="cta-btn-onlyfans" href="https://onlyfans.com/barbietatuada" target="_blank">🔓 Onlyfans Por apenas $ 7.00</a>
-    <a class="cta" id="cta-btn-telegram" href="https://t.me/privacyTLG" target="_blank">💬 Telegram Entre grátis</a>
+    <a class="cta" id="cta-btn-telegram" href="https://t.me/seu_telegram" target="_blank">💬 Telegram Entre grátis</a>
 
   </div>
   <script>
